<resources>
    <string name="app_name">Mi Practica 4</string>
    <string name="nav_header_title">Mi primer DrawerLayout</string>
    <string name="circle_description">circle nav header</string>
    <string name="my_name">Alondra Abrego</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_radio">Radio Button</string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="homeTitle">HOME</string>
    <string name="radio_title">Practica 4 Radio Button</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="blanco">Blanco</string>
    <string name="cafe">Cafe</string>
    <string name="rosa_fuerte">Rosa Fuerte</string>
    <string name="verde_claro">Verde Claro</string>
    <string name="morado">Morado</string>
    <string name="gris">Gris</string>
    <string name="anaranjado">Anaranjado</string>
    <string name="rosa">Rosa</string>
    <string name="nav_ciclo_vida">Ciclo de vida</string>
    <string name="nav_hola_mundo">Hola Mundo</string>


    <!-- Ciclo de vida  -->
    <string name="onCreateMessage">La activity a detonado el metodo onCreate</string>
    <string name="onStartMessage">on Start se esta ejecutando</string>
    <string name="onResumeMessage">El método onResume se está ejecutando y la vista de nuestro Activity está en primer plano</string>
    <string name="onPauseMessage">on Pause la activity esta en segundo plano</string>
    <string name="onStopMessage">on Stop La activity entra en un estado de reposo</string>
    <string name="onRestartMessage">on Restart La app se esta retornando a primer plano</string>
    <string name="onDestroyMessage">ya no existe</string>
    <string name="HolaMundo">Hola Mundo</string>

    <string name="nav_recycler_view">Recycler View</string>
    <string name="recyclerTitle">Tus me gusta</string>
    <string name="cancion">Nombre de la cancion</string>
    <string name="nav_image">Image</string>

    <string name="nav_maps">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="showCamionetas">Mostrar Conductores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_ubicacion">Ubicacion</string>
    <string name="lista_personas">Lista personas</string>
    <string name="nav_ubicacion_persona">Ubicacion Persona</string>
    <string name="ubicacion_persona">Ubicacion Persona</string>
    <string name="Satelite">Mapa tipo Satelite</string>
    <string name="Hibrido">Mapa tipo Hibrido</string>
    <string name="Terreno">Mapa tipo Terreno</string>
    <string name="Normal">Mapa tipo Normal</string>
    <string name="Ninguno">Mapa tipo Ninguno</string>
    <string name="room">Room</string>
    <string name="Contactos">Alta de Contactos</string>
    <string name="etName">Ingrese su Nombre</string>
    <string name="etAPaterno">Ingrese su Apellido Paterno</string>
    <string name="Guardar">Guardar</string>
    <string name="etAMaterno">Ingrese Apellido Materno</string>
    <string name="etTelefono">Ingrese su Telefono</string>
    <string name="confi">Configuracion</string>
    <string name="configt">Uso de camara y galeria</string>
    <string name="configDes">Para cambiar imagen de tu avatar selecciona una opcion</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="recorta">Recorta tu imagen</string>
    <string name="listo">Listo</string>
    <string name="bottom">BottomSheet</string>
    <string name="zmrStartBottom">Iniciar BottomSheet</string>
    <string name="tvComplete">Completa los datos de tu negocio</string>
    <string name="tvOfrecer">Que ofrece?</string>
    <string name="productos">Productos</string>
    <string name="Servicio">Servicios</string>
    <string name="tvCatedoria">Categoria</string>
    <string name="tvElegir">Elige los dias y horarios de atencion \nde tu negocio</string>
    <string name="Disponible">Disponible 24/7</string>
    <string name="personalizar">Personalizar</string>
    <string name="registrar">Registrar</string>
    <string name="zmrStartBottom2">Iniciat BottomSheet 2</string>
    <string name="nombre_negocio">Nombre del negocio</string>
    <string name="tipo_servicio">Tipo de servicio</string>
    <string name="tipo_negocio">Tipo de negocio</string>
    <string name="tipo_fijo">Fijo</string>
    <string name="tipo_semi_movil">Semi móvil</string>
    <string name="tipo_movil">Móvil</string>
    <string name="direccion_negocio">Dirección del negocio</string>
    <string name="ubicacion_real">Ubicación real</string>
    <string name="calle">Calle</string>
    <string name="colonia">Colonia</string>
    <string name="codigo">C.P</string>
    <string name="estado">Estado</string>
    <string name="municipio">Municipio</string>
    <string name="telefono">Número de celular</string>
    <string name="mail">Email*</string>
    <string name="descripcion">Descripción*</string>
    <string name="til_descripcion">Escribe aqui...</string>
    <string name="comentario">Estos campos son opcionales*</string>
    <string name="continuar">Continuar</string>
    <string name="mi_ruta">Mi ruta</string>
    <string name="title_activity_maps2">Map</string>
</resources>