<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.base.MapsActivity" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <Button
        android:id="@+id/btnCamionetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:text="@string/showCamionetas"
        android:textAllCaps="false"
        map:layout_constraintBottom_toTopOf="@+id/radio_group"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_header"
        android:padding="5dp"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/btnSatelite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Terreno" />

        <RadioButton
            android:id="@+id/btnTerreno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hibrido" />

        <RadioButton
            android:id="@+id/btnNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Normal" />

        <RadioButton
            android:id="@+id/btnHibrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Satelite" />

        <RadioButton
            android:id="@+id/btnNinguno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ninguno"/>

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>

