<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitulo"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/descripcion"
        android:text="@string/configt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescripcion"
        style="@style/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/descripcopn"
        android:layout_marginTop="@dimen/descripcopn"
        android:layout_marginEnd="@dimen/descripcopn"
        android:text="@string/configDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"/>

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        style="@style/buttonRounded"
        android:textSize="@dimen/camara"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/camara"/>

    <Button
        android:id="@+id/btnGaletia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonRounded"
        android:textSize="@dimen/camara"
        android:layout_marginTop="@dimen/descripcopn"
        app:layout_constraintTop_toBottomOf="@+id/btnCamara"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/galeria"/>

</androidx.constraintlayout.widget.ConstraintLayout>